WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302933
REGRESSION (iOS 26.1): videoElement.audioTrack incorrectly changes "description" kind to main when the system settings prefer it
https://bugs.webkit.org/show_bug.cgi?id=302933
Summary
REGRESSION (iOS 26.1): videoElement.audioTrack incorrectly changes "descripti...
Jim Ley
Reported
2025-11-21 03:29:48 PST
Created
attachment 477459
[details]
Simple test m3u8 and page. When AD is enabled in OS settings - Settings > Accessibility > Audio Descriptions Toggle > enabled And you play a video in Safari with both an AD and a main track, the AD track is correctly played, however the audioTracks API changes that audioTrack "kind" to be main rather than description, this is correct in previous iOS / iPadOS versions. Open the attached example page, see the console return two audioTracks on the video element, when the AD toggle is off one is kind:main one is kind:description, when the AD toggle is on, they are both main and there is now way of distinguishing between the two (to provide a UI to swap back to the non AD track or in other multi-language scenarios to allow them to swap back. iOS26.1 is the first place we've seen this, it's correct in all previous.
Attachments
Simple test m3u8 and page.
(64.27 KB, application/x-zip-compressed)
2025-11-21 03:29 PST
,
Jim Ley
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-11-21 12:49:12 PST
<
rdar://problem/165229625
>
roberto_rodriguez2
Comment 2
2025-12-11 21:37:27 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55293
EWS
Comment 3
2026-01-26 15:07:55 PST
Committed
306249@main
(3bb5190507ae): <
https://commits.webkit.org/306249@main
> Reviewed commits have been landed. Closing PR #55293 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug