REGRESSION (iOS 26.1): videoElement.audioTrack incorrectly changes "description" kind to main when the system settings prefer it rdar://165229625 https://bugs.webkit.org/show_bug.cgi?id=302933

Reviewed by Eric Carlson.

When the Audio Descriptions accessibility setting is enabled, HLS audio
description tracks incorrectly report kind="main" instead of
kind="description". The issue occurs when AVFoundation strips
accessibility characteristics from AVAssetTrack objects while preserving
them in associated MediaSelectionOption objects.

Add a fix to check MediaSelectionOption for accessibility
characteristics when they are missing from AVAssetTrack, ensuring that
audio description tracks receive correct classification.

Add a layout test that simulates the system condition where
MediaAccessibility return preferred characteristics, reproducing the
scenario where AVAssetTrack loses accessiblity characteristics while
MediaSelectionOption preserves them.

Test: http/tests/media/hls-audio-description-track-kind.html

* LayoutTests/http/tests/media/hls/hls-audio-description-track-kind-expected.txt: Added.
* LayoutTests/http/tests/media/hls/hls-audio-description-track-kind.html: Added.
* LayoutTests/http/tests/media/resources/hls/audio-description/ad.fmp4.m3u8: Added.
* LayoutTests/http/tests/media/resources/hls/audio-description/ad.m4s: Added.
* LayoutTests/http/tests/media/resources/hls/audio-description/audio.fmp4.m3u8: Added.
* LayoutTests/http/tests/media/resources/hls/audio-description/audio.init: Added.
* LayoutTests/http/tests/media/resources/hls/audio-description/audio.m4s: Added.
* LayoutTests/http/tests/media/resources/hls/audio-description/main.fmp4.m3u8: Added.
* LayoutTests/http/tests/media/resources/hls/audio-description/main.m3u8: Added.
* LayoutTests/http/tests/media/resources/hls/audio-description/video.init: Added.
* LayoutTests/http/tests/media/resources/hls/audio-description/video.m4s: Added.
* LayoutTests/platform/gtk/TestExpectations:
* LayoutTests/platform/mac-wk2/TestExpectations:
* LayoutTests/platform/wpe/TestExpectations:
* Source/WebCore/page/CaptionUserPreferences.cpp:
(WebCore::CaptionUserPreferences::preferredAudioCharacteristics const):
* Source/WebCore/page/CaptionUserPreferences.h:
(WebCore::CaptionUserPreferences::setPreferredAudioCharacteristicsForTesting):
(WebCore::CaptionUserPreferences::preferredAudioCharacteristicsForTesting const):
* Source/WebCore/platform/graphics/avfoundation/AVTrackPrivateAVFObjCImpl.mm:
(WebCore::AVTrackPrivateAVFObjCImpl::audioKind const):
* Source/WebCore/testing/Internals.cpp:
(WebCore::Internals::setPreferredAudioCharacteristicsForTesting):
* Source/WebCore/testing/Internals.h:
* Source/WebCore/testing/Internals.idl:

Canonical link: https://commits.webkit.org/306249@main